# aehf

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.MD  chat-transcript-2026-07-03.md  demo.tape  index.html  mkdocs.yml  pyproject.toml  scorecard.md
.aehf/2d32b15d2deebda5731c1c7b3d3072e97c60f649/: claude-haiku-4-5-20251001__v1.json  claude-sonnet-5__v1.json
.aehf/d303254275105f4d9d069720e519969fbe26e8a7/: claude-haiku-4-5-20251001__v1.json
.github/workflows/: ci.yml  eval.yml
calibration/: index.html
docs/: calibration.md  decision.md  eval-gate.md  index.md
eval-gate/: index.html
examples/: calibration_suite.yaml  demo.yaml
labels/: labels.jsonl  labels_filled.jsonl  reviewed.jsonl
md/: base__head.md
results/: calibration-13525f86.json  calibration-17622f9e.json  calibration-388c5a79.json  calibration-430ad914.json  calibration-e5d1cb4b.json  run1.json  run2.json  run3.json  run4.json  run5.json
search/: search_index.json
site/: index.html
site/decision/: index.html
src/aehf/: __init__.py  cli.py
src/aehf/adapters/: anthropic.py  base.py  fake.py
src/aehf/core/: case.py  loader.py  results.py  runner.py  transcript.py
src/aehf/judges/: assertionjudge.py  base.py  calibration.py  llmjudge.py  runner.py
src/aehf/regression/: diff.py  store.py
src/aehf/reporting/: markdown.py
src/aehf/stats/: aggregate.py  compare.py  sampling.py
src/aehf/tools/: base.py  mock.py  replay.py
tests/: error.yaml  happy.yaml  malformed.yaml  slowagent.py  test_anthropic_adapter.py  test_calibration.py  test_cli.py  test_diff.py  test_fakeagents.py  test_judge.py  test_judge_suite.py  test_live_anthropic.py  test_llmjudge.py  test_loader.py  test_markdown.py  test_mocktool.py  test_models.py  test_replay.py  test_results_persistence.py  test_run.py  test_stats.py  test_store.py  test_version.py
