[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aehf"
description = "agent evaluation harness framework"
version = "0.1.1"
license = "MIT"
readme = "README.MD"                    
authors = [{ name = "Sai Teja Alasyam", email = "salasya2@asu.edu" }]
license-files = ["LICENSE"]
requires-python = ">= 3.11"
dependencies = [
    "anthropic",
    "pydantic >= 2.7",
    "pyyaml",
    "typer",
    "python-dotenv",
    
]
[project.urls]
Homepage = "https://github.com/salasya2/aehf"
Repository = "https://github.com/salasya2/aehf"

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "types-PyYAML"
]

[tool.ruff]

line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E" , "F", "I","UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]

python_version = "3.13"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
aehf = "aehf.cli:app"